--- a/assignments/day3lay3.html
+++ b/assignments/day3lay3.html
@@ -8,17 +8,15 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="box1">Google Guidelines</div>
-			<div class="box2">Material Design</div>
-			<div class="box3">Doodle Archive</div>
-	
-			<div class="box4">Google +</div>
-			<div class="box5">Design minutes</div>
-			<div class="box6">Glass Designes</div>
-		
-			<div class="box7">HTML</div>
-			<div class="box8">CSS</div>
-			<div class="box9">Javascript</div>
-		</div>
+			<div class="box1 ">Google Guidelines</div><!-- 
+			 --><div class="box2 ">Material Design</div><!-- 
+			 --><div class="box3 ">Doodle Archive</div><!-- 
+				 --><div class="box4 ">Google +</div><!-- 
+			 --><div class="box5 ">Design minutes</div><!-- 
+			 --><div class="box6 ">Glass Designes</div><!-- 
+			 --><div class="box7 ">HTML</div><!-- 
+			 --><div class="box8 ">CSS</div><!-- 
+			 --><div class="box9 ">Javascript</div><!-- 
+		 --></div>
 	</body>
 </html>
