add restructured layouts

--- a/assignments/day3lay1.html
+++ b/assignments/day3lay1.html
@@ -7,20 +7,43 @@
 /Documents/learn/html_css_practices/assignments/assets/style/day3lay1.css">
 </head>
 <body>
-	<h1>exercise 1</h1>
-	<div class="box1"></div>
-	<br>
-		<span class="box2"></span>
-		<span class="box3"></span>
-		<br>	
-		<span class="box4"></span>
-		<span class="box5"></span>
 
-	<h1>exercise2: Content-box</h1>
+			<!-- top box -->
+
+
+	<h1>Exercise 1</h1>
+	<div class="box top"></div>
+
+			<!-- two midle boxes -->
+
+
+	<div class="box midle box1"></div>
+	<div class="box midle box2"></div>
+	<br>
+
+			<!-- two bottom boxes -->
+
+
+	<div class="box bottom dotted"></div>
+	<div class="box bottom"></div>
+
+			<!-- exercise 2 -->
+
+	<h1>Exercise2: Content-box</h1>
+	
+			
+			<!-- content box 1 -->
+
+
 	<div class="ex2">
 		<div class="content1">content</div>
 	</div>
-	<h1>exercise3: border-box</h1>
+	<h1>Exercise3: border-box</h1>
+	
+
+			<!-- content box2 -->
+
+
 	<div class="ex3">
 		<div class="content2">content</div>
 	</div>
