--- a/assignments/day3lay3.html
+++ b/assignments/day3lay3.html
@@ -3,20 +3,19 @@
 	<head>
 		<title>lay3</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="/home/macbook
-/Documents/learn/html_css_practices/assignments/assets/style/day3lay3.css">
+		<link rel="stylesheet" type="text/css" href="assets/style/day3lay3.css">
 	</head>
 	<body>
 		<div class="container">
-			<div class="box1 ">Google Guidelines</div><!-- 
-			 --><div class="box2 ">Material Design</div><!-- 
-			 --><div class="box3 ">Doodle Archive</div><!-- 
-				 --><div class="box4 ">Google +</div><!-- 
-			 --><div class="box5 ">Design minutes</div><!-- 
-			 --><div class="box6 ">Glass Designes</div><!-- 
-			 --><div class="box7 ">HTML</div><!-- 
-			 --><div class="box8 ">CSS</div><!-- 
-			 --><div class="box9 ">Javascript</div><!-- 
+			<div class="box bigbox bigbox box1">Google Guidelines</div><!-- 
+			 --><div class="box smallbox midlebox box2">Material Design</div><!-- 
+			 --><div class="box smallbox box3">Doodle Archive</div><!-- 
+				 --><div class="box smallbox midlrow box4">Google +</div><!-- 
+			 --><div class="box bigbox midlebox midlrow box5">Design minutes</div><!-- 
+			 --><div class="box smallbox midlrow box6">Glass Designes</div><!-- 
+			 --><div class="box smallbox box7">HTML</div><!-- 
+			 --><div class="box smallbox midlebox box8">CSS</div><!-- 
+			 --><div class="box bigbox box9">Javascript</div><!-- 
 		 --></div>
 	</body>
 </html>
