--- a/assignments/day3lay4.html
+++ b/assignments/day3lay4.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<title>
-			layout4
-		</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="/home/macbook
-/Documents/learn/html_css_practices/assignments/assets/style/day3lay4.css">
-	</head>
-	<body>
-		<div class="page">
-			<div class="box">
-				<div class="box1">
+<head>
+	<title>
+		layout4
+	</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/home/macbook
+	/Documents/learn/html_css_practices/assignments/assets/style/day3lay4.css">
+</head>
+<body>
+	<main class="page">
+		<div class="box">
+			<div class="box1">
+				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -25,9 +26,10 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia
-				</div>
+					proident, sunt in culpa qui officia.
+				</p>
 			</div>
 		</div>
-	</body>
+	</main>
+</body>
 </html>
