--- a/assignments/day3layout2.html
+++ b/assignments/day3layout2.html
@@ -1,29 +1,45 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>layout2</title>
-		<link rel="stylesheet" href="/home/macbook
-/Documents/learn/html_css_practices/assignments/assets/style/day3layout2.css">
-	</head>
-	<body>
-		<h5>No border on these boxes</h5>
-		<div class="container1">
-			<div class="box1"></div>
-			<div class="box2"></div>
-			<div class="box3"></div>
+<head>
+	<meta charset="utf-8">
+	<title>layout2</title>
+	<link rel="stylesheet" href="/home/macbook
+	/Documents/learn/html_css_practices/assignments/assets/style/day3layout2.css">
+</head>
+<body>
+	<main class="page">
+
+		<!-- top section -->
+
+
+		<h5 class="headers">No border on these boxes</h5>
+		<div class="container sec1">
+			<div class="box topbox"></div><!-- 
+			 --><div class="box topbox"></div><!-- 
+			 --><div class="box topbox"></div>
 		</div>
-		<h5>10px border on these boxes</h5>
-		<div class="container2">
-			<div class="box4"></div>
-			<div class="box5"></div>
-			<div class="box6"></div>
+		<hr>
+		
+		<!-- midle section -->
+
+
+		<h5 class="headers">10px border on these boxes</h5>
+		<div class="container sec2">
+			<div class="box midlebox"></div><!-- 
+			 --><div class="box midlebox"></div><!-- 
+			 --><div class="box midlebox"></div>
 		</div>
-		<h5>10 px border on these boxes but they are on the same block</h5>
-		<div class="container3">
-			<div class="box7"></div>
-			<div class="box8"></div>
-			<div class="box9"></div>
+		<hr>
+		
+		<!-- bottom section -->
+
+
+		<h5 class="headers">10 px border on these boxes but they are on the same block</h5>
+		<div class="container sec3">
+			<div class="box borderbox1  "></div><!-- 
+			 --><div class="box borderbox1  "></div><!-- 
+			 --><div class="box borderbox1  "></div>
 		</div>
-	</body>
+	</main>
+</body>
 </html>
