--- a/assignments/day4lay2.html
+++ b/assignments/day4lay2.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="/home/macbook
-/Documents/learn/html_css_practices/assignments/assets/style/day4lay2.css">
+	/Documents/learn/html_css_practices/assignments/assets/style/day4lay2.css">
 </head>
 <body>
 	<main>
-		<header>
+		<header class="head">
 			<div class="altcampus">
-				<h1>AltCampus</h1>
+				<h1 class="title">AltCampus</h1>
 			</div>
 			<nav class="nav">
 				<a class="nav1" href="https://www.google.com" target="_blank">Nav item 1</a>
@@ -19,30 +19,29 @@
 			</nav>
 		</header>
 		<section class="sec1">
-			<h1>Page title</h1>
+			<h2 class="title one" >Page Title</h2>
 			<hr>
-			<h5>Paragraphs</h5>
+			<h3  class="title one two">Paragraphs</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			<a href="https://www.google.com" target="_blank">tempor incididunt</a> ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				<a href="https://www.google.com" target="_blank">tempor incididunt</a> ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<p>Lorem ipsum dolor sit amet, <a href="https://www.facebook.com" target="_blank">consectetur adipisicing</a> elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<hr>
 			<br>
 			<div class="img">
-				<img class="cat" src="https://images.pexels.com/photos/617278/pexels-photo-617278.jpeg?auto=compress&cs=tinysrgb&h=350">
+				<img class="img cat" src="https://images.pexels.com/photos/617278/pexels-photo-617278.jpeg?auto=compress&cs=tinysrgb&h=350">
 			</div>
 		</section>
-		<br>
 		<footer>
-			<p class="foot">&copy Copyright 2015
+			<p>&copy Copyright 2015
 			</p>
 		</footer>
 	</main>
