--- a/10_days_assignment/day4/assignment1/day4lay1.html
+++ b/10_days_assignment/day4/assignment1/day4lay1.html
@@ -111,7 +111,7 @@
 		<hr>
 		<section class="sec7 sections">
 			<h1>Float:Left;No words</h1>
-			<div class="box2">
+			<div class=" smallbox box2 paddingbox">
 				<img class="box2img" src="https://pbs.twimg.com/profile_images/1016196916374147072/SqqZamY8_400x400.jpg">
 			</div>
 		</section>
@@ -119,7 +119,7 @@
 		<br>
 		<section class="sec8 sections">
 			<h1>Many floats, Not floating</h1>
-			<div class="box3">
+			<div class=" smallbox box3">
 				<div class="flag"></div>
 				<div class="flag"></div>
 				<div class="flag"></div>
@@ -130,7 +130,7 @@
 		<hr>
 		<section class="sec9 sections">
 			<h1>Many floats, No words</h1>
-			<div class="box4">
+			<div class=" smallbox box4">
 				<div class="boxes b1"></div>
 				<div class="boxes b1"></div>
 				<div class="boxes b1"></div>
@@ -153,7 +153,7 @@
 		<hr>
 		<section class="sec10 sections">
 			<h1>Many floats, No words+last one clear</h1>
-			<div class="box5">
+			<div class=" smallbox box5">
 				<div class="boxes b1"></div>
 				<div class="boxes b1"></div>
 				<div class="boxes b1"></div>
@@ -224,7 +224,7 @@
 					<div class="boxes b3"></div>
 					<div class="boxes b3"></div>
 					<div class="boxes b3"></div>
-					<div class="boxes b3 fix"></div>
+					<div class="boxes b3"></div>
 					<div class="boxes b3 fix"></div>
 					<div class="boxes b3 fix"></div>
 					<div class="boxes b3 fix"></div>
