--- a/10_days_assignment/day5/assignment1/day5lay1.html
+++ b/10_days_assignment/day5/assignment1/day5lay1.html
@@ -8,12 +8,12 @@
 <body>
 	<main class="page">
 		<section class="text">
-			<h1>Heading1:A really Awesome Article Title That Uses Vertical Rhythm...
+			<h1 class="header">Heading1:A really Awesome Article Title That Uses Vertical Rhythm...
 			</h1>
-			<br>
-			<h3 class="p1">Tagged: Design Typography</h3>
-			<h3 class="p2">29th February, 2016</h3>
-			<br>
+			<div class="floats">
+				<h3 class="p1">Tagged: Design Typography</h3>
+				<h3 class="p2">29th February, 2016</h3>
+			</div>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -21,19 +21,21 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				<br>
+				</p>
+				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				<br>
+				</p>
+				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				<br>
-				<h1>
+				</p>
+				<h1 class="header">
 					Heading2: Responsive Typography
 				</h1>
 				<p>
