add linear gradient to image

--- a/10_days_assignment/day5/assignment2/day5lay2.html
+++ b/10_days_assignment/day5/assignment2/day5lay2.html
@@ -13,7 +13,7 @@
 
 		<!-- header -->
 
-		<header class="head">Background And Gradiants</header>
+		<header class="head">Background And Gradients</header>
 
 		<!-- box1 -->
 
