add layout8 layout9

--- a/10_days_assignment/box model/layout5/layout5.html
+++ b/10_days_assignment/box model/layout5/layout5.html
@@ -34,8 +34,7 @@
 			    <!-- right float section -->
 			<section class="cf section">
 				<div class="box">
-					<h2>Panel1
-					</h2>
+					<h2>Panel1</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -45,8 +44,7 @@
 					</p>
 				</div>
 				<div class="box">
-					<h2>Panel2
-					</h2>
+					<h2>Panel2</h2>
 					<p>
 						<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
