add border to the icon box

--- a/10_days_assignment/box model/layout8/layout8.html
+++ b/10_days_assignment/box model/layout8/layout8.html
@@ -35,27 +35,44 @@
 			</h3>
 			<div class="icons">
 				<div class="floats">
-					<a href="#"><img src="assets/media/cloud.svg"></a>
-				</div>
-
-				<div class="floats middleicon">
-					<img src="assets/media/settings.svg">
-				</div>
-		
-				<div class="floats">
-					<img src="assets/media/man.svg">
-				</div>
+					<div>
+				<a href="#"><i class="fas fa-cloud-download-alt"></i></a>
 			</div>
-			<div class="sec2">
+			<div>
 				<p class="para">
 					Lorem ipsum dolor sit amet, 		consectetur adipisicing elit, sed do eiusmod
 				</p>
-				<p class="para middlepara">
+				</div>
+				</div>
+				<div class="floats middleicon">
+					<div>
+				<a href="#"><i class="fas fa-cogs"></i></a>
+				</div>
+				<div>
+					<p class="para">
+						Lorem ipsum dolor sit amet, 			consectetur adipisicing elit, sed do eiusmod
+					</p>
+				</div>
+				</div>
+				<div class="floats">
+					<div>
+					<a href="#"><i class="fas fa-user"></i></a>
+				</div>
+				<div>
+					<p class="para">
+						Lorem ipsum dolor sit amet, 			consectetur adipisicing elit, sed do eiusmod
+					</p>
+				</div>
+				</div>
+			</div>
+		<!-- 	<div class="sec2"> -->
+				
+				<!-- <p class="para middlepara">
 					Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
 				</p>
 				<p class="para">
 					Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
-				</p>
+				</p> -->
 			</div>
 			<button class="greenbutton">CLICK HERE</button>
 		</section>
