add topbox double border imgbox boredr remove

--- a/10_days_assignment/box model/layout9/layout9.html
+++ b/10_days_assignment/box model/layout9/layout9.html
@@ -10,7 +10,7 @@
 		<main class="main">
 			<section class="section1">
 				<div class="topcontainer">
-					<h1><strong>TYPEIFY</strong>IS A FREE RESPONSIVE SITE TEMPLATE
+					<h1><strong>TYPEIFY</strong> IS A FREE RESPONSIVE SITE TEMPLATE
 					<h1>
 				</div>
 				<h2>BROUGHT TO YOU BY TEMPLATED</h2>
@@ -23,25 +23,30 @@
 				<hr>
 				<hr>
 				<div class="img_container_1">
-					<div class="box topbox"><a href="#"><img src="assets/media/diamond.svg"></a>
+					<div class="box topbox">
+						<a href="#"><i class="fal fa-gem"></i></a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					</div><!-- 
-					 --><div class="box topbox"><a href="#"><img src="assets/media/files.svg"></a>
+					 --><div class="box topbox middle">
+					 	<a href="#"><i class="fal fa-copy"></i></a>
 					 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					 </div><!-- 
-					 --><div class="box topbox"><a href="#"><img src="assets/media/plane.svg"></a>
+					 --><div class="box topbox">
+					 	<a href="#"><i class="fal fa-paper-plane"></i></a>
 					 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.	</p>
 					 </div>
 					</div><!-- 
-				 --><div class="img_container_1">
-					<div class="box bottombox"><a href="#"><img src="assets/media/flopy.svg"></a>
+				 --><div class=" imgcntnr2">
+					<div class="box bottombox right">
+						<a href="#"><i class="fal fa-save"></i></a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					</div><!-- 
-					 --><div class="box bottombox"><a href="#"><img src="assets/media/message.svg"></a>
+					 --><div class="box bottombox">
+					 	<a href="#"><i class="far fa-envelope"></i></a>
 					 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					 </div>
