--- a/10_days_assignment/box model/layout9/layout9.html
+++ b/10_days_assignment/box model/layout9/layout9.html
@@ -24,24 +24,24 @@
 				<hr>
 				<div class="img_container_1">
 					<div class="box topbox">
-						<a href="#"><i class="fal fa-gem"></i></a>
+						<a href="#"><i class="far fa-gem"></i></a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					</div><!-- 
 					 --><div class="box topbox middle">
-					 	<a href="#"><i class="fal fa-copy"></i></a>
+					 	<a href="#"><i class="far fa-copy"></i></a>
 					 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					 </div><!-- 
 					 --><div class="box topbox">
-					 	<a href="#"><i class="fal fa-paper-plane"></i></a>
+					 	<a href="#"><i class="fab fa-telegram-plane"></i></a>
 					 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.	</p>
 					 </div>
 					</div><!-- 
 				 --><div class=" imgcntnr2">
 					<div class="box bottombox right">
-						<a href="#"><i class="fal fa-save"></i></a>
+						<a href="#"><i class="far fa-save"></i></a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.	</p>
 					</div><!-- 
