--- a/10_days_assignment/box model/layout8/layout8.html
+++ b/10_days_assignment/box model/layout8/layout8.html
@@ -11,12 +11,12 @@
 	<!-- header -->
 	<header class="head center">
 		<nav>
-			<h1>PLAINDISPLAY</h1>
-			<a class="links" href="">HOMEPAGE</a>
-			<a class="links" href="">OUR CLIENTS</a>
-			<a class="links" href="">ABOUT US</a>
-			<a class="links" href="">CAREERS</a>
-			<a class="links" href="">CONTACT US</a>
+				<h1>PLAINDISPLAY</h1>
+				<a class="links green" href="">HOMEPAGE</a>
+				<a class="links" href="">OUR CLIENTS</a>
+				<a class="links" href="">ABOUT US</a>
+				<a class="links" href="">CAREERS</a>
+				<a class="links" href="">CONTACT US</a>
 		</nav>
 	</header>
 	<main class="center">
