--- a/10_days_assignment/box model/layout12/cerulean.html
+++ b/10_days_assignment/box model/layout12/cerulean.html
@@ -1,135 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>layout12</title>
-	<link rel="stylesheet" type="text/css" href="assets/stylesheet/layout12.css">
+	<head>
+		<meta charset="utf-8">
+		<title>layout12</title>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheet/layout12.css">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-	<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-</head>
-<body>
-
-	<!-- 		herader 		-->
-	<header class="header">
-		<div class="wrapper">
-			<span class="logo primary-color"><i class="fas fa-cog"></i></span>
-			<a class="logo primary-color" href="#">Cerulean</a>
-		</div>
-
-		<!-- 		navigation 		-->
-
-		<div class="wrapper">
-			<nav class="navbar wrapper">
-				<ul>
-					<li class="list"><a class="logo primary primary-color" href="#">homepage</a></li>
-					<li class="list"><a class="logo primary primary-color" href="#">our clients</a></li>
-					<li class="list"><a class="logo primary primary-color" href="#">about us</a></li>
-					<li class="list"><a class="logo primary primary-color" href="#">careers</a></li>
-					<li class="list"><a class="logo primary primary-color" href="#">contact us</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-
-	<!-- 		main 		-->
-	<main>
-		<section class="secion2 wrapper">
-			<h1 class="header1 wrapper text-align">Welcome to our website</h1>
-			<p class="text-align paraclr wrapper" >
-				This is <strong>Cerulean</strong>, a free, fully#404040 standards-compliant CSS template designed by <a href="#">TEMPLATED</a>. The photos in this template are from <a href="#">Fotogrph</a>. This free template is released under the <a href="#">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)
-			</p>
-		</section>
-
-		<section class="section3">
-			<div class="wrapper text-align">
-				<div class="textbox paraclr">
-					<h2 class="h2 text-align">Maecenas luctus</h2>
-					<p class="para2 text-align">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-					<button class="btn text-align">learn more</button>
-				</div>
-				<div class="textbox paraclr">
-					<h2 class="h2 text-align">Maecenas luctus</h2>
-					<p class="para2 text-align">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-					<button class="btn text-align">learn more</button>
-				</div>
-				<div class="textbox paraclr">
-					<h2 class="h2 text-align">Maecenas luctus</h2>
-					<p class="para2 text-align">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-					<button class="btn text-align">learn more</button>
-				</div>
+	</head>
+	<body>
+		<!-- 		herader 		-->
+		<header class="header">
+			<div class="wrapper">
+				<span class="logo primary-color"><i class="fas fa-cog"></i></span>
+				<a class="logo primary-color" href="#">Cerulean</a>
 			</div>
 
+			<!--		 wrapper 		-->
+			<div class="wrapper">
 
-			<div class="clrbox text-align">
-				<div class="box">
-					<div class="bluebox"></div>
-					<br>
-					<h3 class="h3 text-align">Maecenas luctus</h3>
-					<p class=" para2 para3 text-align">
-					Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<button class="btn btn2">Etiam posuere</button>
-				</div>
-
-				<div class="box">
-					<div class="bluebox"></div>
-					<br>
-					<h3 class="h3 text-align">Maecenas luctus</h3>
-					<p class=" para2 para3 text-align">
-					Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<button class="btn btn2">Etiam posuere</button>
-				</div>
-
-				<div class="box">
-					<div class="bluebox"></div>
-					<br>
-					<h3 class="h3 text-align">Maecenas luctus</h3>
-					<p class=" para2 para3 text-align">
-					Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<button class="btn btn2">Etiam posuere</button>
-				</div>
-
-				<div class="box">
-					<div class="bluebox"></div>
-					<br>
-					<h3 class="h3 text-align">Maecenas luctus</h3>
-					<p class=" para2 para3 text-align">
-					Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<button class="btn btn2">Etiam posuere</button>
-				</div>
+				<!-- 		navigation 		-->
+				<nav class="navbar">
+					<ul>
+						<li class="list"><a class="logo primary primary-color" href="#">homepage</a></li>
+						<li class="list"><a class="logo primary primary-color" href="#">our clients</a></li>
+						<li class="list"><a class="logo primary primary-color" href="#">about us</a></li>
+						<li class="list"><a class="logo primary primary-color" href="#">careers</a></li>
+						<li class="list"><a class="logo primary primary-color" href="#">contact us</a></li>
+					</ul>
+				</nav>
 			</div>
-		</div>
-	</section>
+		</header>
 
+		<!-- 		main 		-->
+		<main>
+			<!--		 section2 		-->
+			<section class="section2">
+				<div class="wrapper">
+					<h1 class="header1 text-align">Welcome to our website</h1>
+					<p class="text-align paraclr wrapper" >
+						This is <strong>Cerulean</strong>, a free, fully#404040 standards-compliant CSS template designed by <a href="#">TEMPLATED</a>. The photos in this template are from <a href="#">Fotogrph</a>. This free template is released under the <a href="#">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)
+					</p>
+				</div>
+			</section>
 
-	<section class="section4">
-		<h1 class="header1 text-align">Vivamus fermentum nibh</h1>
-	
-		<figure>
-			<div class="icons"><i class="fas fa-gavel"></i></div>
-			<div class="icons"><i class="fas fa-skull-crossbones"></i></div>
-			<div class="icons"><i class="fas fa-key"></i></div>
-			<div class="icons"><i class="fas fa-wrench"></i></div>
-			<div class="icons"><i class="fas fa-cut"></i></div>
-			<div class="icons"><i class="fas fa-filter"></i></div>
-			<div class="icons"><i class="fas fa-lock"></i></div>
-		</figure>
-	</section>
-</main>
-	<footer class="footer">
-		<small class="center"> © Untitled. All rights reserved. | Photos by <a href="#">Fotogrph</a> | Design by <a href="#">TEMPLATED</a>.</small>
+			<!-- section3 -->
+			<section class="section3">
+				<div class="wrapper text-align">
+					<div class="textbox paraclr text-align">
+						<h2 class="h2">Maecenas luctus</h2>
+						<p class="para2">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
+						<button class="btn">learn more</button>
+					</div>
+					<div class="textbox paraclr text-align">
+						<h2 class="h2">Maecenas luctus</h2>
+						<p class="para2">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
+						<button class="btn">learn more</button>
+					</div>
+					<div class="textbox paraclr text-align">
+						<h2 class="h2">Maecenas luctus</h2>
+						<p class="para2">Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
+						<button class="btn">learn more</button>
+					</div>
+				</div>
+			</section>
 
-		<figure>
-			<div class="footericon"><i class="foot fab fa-twitter"></i></div>
-			<div class="footericon"><i class="foot fab fa-facebook-f"></i></div>
-			<div class="footericon"><i class="foot fas fa-globe"></i></div>
-			<div class="footericon"><i class="foot fab fa-tumblr"></i></div>
-			<div class="footericon"><i class="foot fas fa-rss"></i></i></div>
-		</figure>
-	</footer>
-</body>
+				<!-- 		section4 		-->
+			<section class="section4">
+					<div class="clrbox text-align">
+						<div class="box text-align">
+							<div class="bluebox">
+								<img src="assets/media/scr01.jpg">
+							</div>
+							<br>
+							<h3 class="h3">Maecenas luctus</h3>
+							<p class="para2 para3">
+							Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+							<button class="btn btn2">Etiam posuere</button>
+						</div>
+
+						<div class="box text-align">
+							<div class="bluebox">
+								<img src="assets/media/scr02.jpg">
+							</div>
+							<br>
+							<h3 class="h3">Maecenas luctus</h3>
+							<p class="para2 para3">
+							Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+							<button class="btn btn2">Etiam posuere</button>
+						</div>
+
+						<div class="box text-align">
+							<div class="bluebox">
+								<img src="assets/media/scr03.jpg">
+							</div>
+							<br>
+							<h3 class="h3">Maecenas luctus</h3>
+							<p class="para2 para3">
+							Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+							<button class="btn btn2">Etiam posuere</button>
+						</div>
+
+						<div class="box text-align">
+							<div class="bluebox">
+								<img src="assets/media/scr04.jpg">
+							</div>
+							<br>
+							<h3 class="h3">Maecenas luctus</h3>
+							<p class="para2 para3">
+							Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+							<button class="btn btn2">Etiam posuere</button>
+						</div>
+					</div>
+			</section>
+
+			<!--		 section5 		-->
+			<section class="section5">
+				<h1 class="header1 text-align">Vivamus fermentum nibh</h1>
+				<figure>
+					<div class="icons">
+						<a href="#"><i class="fas fa-gavel"></i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-skull-crossbones"></i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-key">		</i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-wrench"></i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-cut"></i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-filter"></i></a>
+					</div>
+					<div class="icons"><a href="#"><i class="fas fa-lock"></i></a>
+					</div>
+				</figure>
+			</section>
+		</main>
+		<footer class="footer">
+			<small class="center"> © Untitled. All rights reserved. | Photos by <a href="#">Fotogrph</a> | Design by <a href="#">TEMPLATED</a>.</small>
+
+			<figure>
+				<div class="footericon">
+					<a href="#"><i class="foot fab fa-twitter"></i></a></div>
+				<div class="footericon">
+					<a href="#"><i class="foot fab fa-facebook-f"></i></a></div>
+				<div class="footericon">
+					<a href="#"><i class="foot fas fa-globe"></i></a></div>
+				<div class="footericon">
+					<a href="#"><i class="foot fab fa-tumblr"></i></a></div>
+				<div class="footericon">
+					<a href="#"><i class="foot fas fa-rss"></i></i></a></div>
+			</figure>
+		</footer>
+	</body>
 </html>
