--- a/10_days_assignment/background and gradients/layout1/index.html
+++ b/10_days_assignment/background and gradients/layout1/index.html
@@ -176,11 +176,23 @@
 								</li>
 								<li>
 									<h3 class="head">Social</h3>
-									<i class="fab fa-twitter"></i>
-									<i class="fab fa-facebook-f"></i>
-									<i class="fab fa-github"></i>
-									<i class="fab fa-instagram"></i>
-									<i class="fab fa-linkedin-in"></i>
+									<div class="small-icon">
+										<span class="inline-block">
+											<i class="fab fa-twitter"></i>
+										</span>
+										<span class="inline-block">
+											<i class="fab fa-facebook-f"></i>
+										</span>
+										<span class="inline-block">
+											<i class="fab fa-github"></i>
+										</span>
+										<span class="inline-block">
+											<i class="fab fa-instagram"></i>
+										</span>
+										<span class="inline-block">
+											<i class="fab fa-linkedin-in"></i>
+										</span>
+									</div>
 								</li>
 							</ul>
 						</div>
