add dd-2 padding-top

--- a/10_days_assignment/creating list/layout1/index.html
+++ b/10_days_assignment/creating list/layout1/index.html
@@ -106,7 +106,7 @@
 
 			<dl>
 				<dt class="dt-title">lorem ipsum</dt>
-				<dt>dummy text</dt>
+				<dt class="dt-title two">dummy text</dt>
 				<dd class="dd-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
