--- a/10_days_assignment/templated.co/layout-2/index.html
+++ b/10_days_assignment/templated.co/layout-2/index.html
@@ -5,181 +5,214 @@
 	<title>layout-2</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheet/main.css">
 
-	<link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500|Source+Sans+Pro:200,300,400,700" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 <body>
-	<header class="head">
-		<nav>
+	<header class="head cf">
+		<span class="inline-blk sec-clr"><a class="a logo inline-blk sec-clr" href="#">faction</a> by pixelarity</span>
+		<nav class="nav-lst inline-blk">
 			<ul>
-				<h1 class="inline-blk"><a class="logo href">faction</a> by pixelarity</h1>
-				<li class="list inline-blk"><a class="links" href="#">home</a></li>
-				<li class="list inline-blk"><a class="links" href="#">dropdown</a>
-					<ul>
-						<li></li>
+				<li class="list inline-blk"><a class="a links sec-clr" href="#">home</a></li>
+				<li class="list inline-blk">
+					<a class=" dropdown-list a links sec-clr" href="#">
+					<i class="fas fa-angle-down"></i>dropdown</a>
+					<ul class="dropdown-content">
+						<li class="lst-2">home</li>
+						<li class="lst-2">first</li>
+						<li class="lst-2">second</li>
+						<li class="lst-2">theird</li>
+						<li class="lst-2">fourth</li>
+						<li>
+							<ul class="subsection">
+								<li class="lst-2">subsection</li>
+								<li class="lst-2">home</li>
+								<li class="lst-2">home</li>
+								<li class="lst-2">home</li>
+								<li class="lst-2">home</li>
+							</ul>
+						</li>
 					</ul>
 				</li>
-				<li class="list inline-blk"><a class="links" href="#">generic</a></li>
-				<li class="list inline-blk"><a class="links" href="#">elements</a></li>
-				<button>log in</button>
+				<li class="list inline-blk"><a class="a links sec-clr" href="#">generic</a></li>
+				<li class="list inline-blk"><a class="a links sec-clr" href="#">elements</a></li>
+				<button class="btn top-btn sec-clr top">log in</button>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<main>
-		<aside class="left-sec">
-			<div>
-				<img src="assets/media/slide04.jpg">
-				<h1>Ultricies sed magna</h1>
-				<p>
-					Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor ipsum dolor.
-					Magna sed dolor
-					Sed mattis nunc lorem
-					Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.
-				</p>
-				<button>click here</button>
+	<main class="page wrapper">
+		<aside class="left-sec inline-blk">
+			<div class="bg-img">
+				<img class="img" src="assets/media/slide04.jpg">
+				<div class="img-txt sec-clr">
+					<h1>Ultricies sed magna</h1>
+					<p>
+						Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor ipsum dolor.
+						Magna sed dolor
+						Sed mattis nunc lorem
+						Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.
+					</p>
+					<button class="btn sec-clr">click here for more</button>
+				</div>
 			</div>
-			<div>
-				<h2>Sed mattis nunc lorem</h2>
+			<div class="container txt-box">
+				<h2 class="head-clr">Sed mattis nunc lorem</h2>
 				<p>Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
 			</div>
 
-			<section class="left-icon-sec">
-				<div><i class="far fa-gem"></i></div>
-				<div>
-					<h4>Nisl sed vitae</h4>
-					<p>Nullam et orci sed lorem magna et vivamus sagittis libero.</p>
-				</div>
-
-				<div><i class="far fa-save"></i></div>
-				<div>
-					<h4>Sed mattis nunc</h4>
-					<p>Duis non efficitur nisi, sed justo. Maecenas sagittis semper.</p>
-				</div>
-
-				<div><i class="fas fa-laptop"></i></div>
-				<div>
-					<h4>Porta ultricies</h4>
-					<p>Maecenas sagittis felis ac sagittis semper. Curabitur purus leo.</p>
-				</div>
-
-				<div><i class="fas fa-paper-plane"></i></div>
-				<div>
-					<h4>Magna tellus</h4>
-					<p>Auctor orci eu dolor consectetur, interdum ullamcorper ante.</p>
-				</div>
-
-				<div>
-					<img src="assets/media/pic01.jpg">
-					<h4>Sit amet posuere risus amet lorem faucibus lectus</h4>
+			<section class="left-icon-sec inline-blk">
+				<div class="container icon-box top-row lft-vt-clm inline-blk">
+					<div class="icon-bg inline-blk">
+						<i class="far fa-gem"></i>
+					</div><!-- 
+			 --><div class="icon-txt inline-blk">
+						<h4 class="head-clr">Nisl sed vitae</h4>
+						<p>Nullam et orci sed lorem magna et vivamus sagittis libero.</p>
+					</div>
+				</div><!-- 
+		 --><div class="container icon-box top-row inline-blk">
+					<div class="icon-bg inline-blk">
+				 		<i class="far fa-save"></i>
+				 	</div><!-- 
+			 --><div class="icon-txt inline-blk">
+						<h4 class="head-clr">Sed mattis nunc</h4>
+						<p>
+							Duis non efficitur nisi, sed justo. Maecenas sagittis semper.
+						</p>
+					</div>
+				</div><!-- 
+			--><div class="container icon-box bottom-row lft-vt-clm inline-blk">
+					<div class="icon-bg inline-blk">
+				 		<i class="fas fa-laptop"></i>
+				 	</div><!-- 
+				 	 --><div class="icon-txt inline-blk">
+						<h4 class="head-clr">Porta ultricies</h4>
+						<p>Maecenas sagittis felis ac sagittis semper. Curabitur purus leo.</p>
+					</div>
+				</div><!-- 
+				 --><div class="container icon-box bottom-row inline-blk">
+		 			<div class="icon-bg inline-blk">
+				 		<i class="fas fa-paper-plane"></i>
+				 	</div><!-- 
+				 	 --><div class="icon-txt inline-blk">
+						<h4 class="head-clr">Magna tellus</h4>
+						<p>Auctor orci eu dolor consectetur, interdum ullamcorper ante.</p>
+					</div>
+				</div><!-- 
+				 --><div class="container icon-box lft-vt-clm inline-blk">
+				 	<div class="inline-blk">
+						<img src="assets/media/pic01.jpg">
+					</div>
+					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
 					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button>learn more</button>
-				</div>
-
-				<div>
-					<img src="assets/media/pic02.jpg">
-					<h4>Sit amet posuere risus amet lorem faucibus lectus</h4>
+					<button class="btn">learn more</button>
+				</div><!-- 
+				 --><div class="container icon-box inline-blk">
+					<div class="inline-blk">
+						<img src="assets/media/pic02.jpg">
+					</div>
+					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
 					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button>learn more</button>
-				</div>
+					<button class="btn">learn more</button>
+				</div><!-- 
 
-				<div>
-					<img src="assets/media/pic03.jpg">
-					<h4>Sit amet posuere risus amet lorem faucibus lectus</h4>
+		 --><div class="container icon-box lft-vt-clm inline-blk">
+					<div>
+						<img src="assets/media/pic03.jpg">
+					</div>
+					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
 					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button>learn more</button>
-				</div>
+					<button class="btn">learn more</button>
+				</div><!-- 
 
-				<div>
-					<img src="assets/media/pic04.jpg">
-					<h4>Sit amet posuere risus amet lorem faucibus lectus</h4>
+		 --><div class="container icon-box  inline-blk">
+					<div>
+						<img src="assets/media/pic04.jpg">
+					</div>
+					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
 					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button>learn more</button>
+					<button class="btn">learn more</button>
 				</div>
 			</section>
-		</aside>
-		
-		<aside class="right-sec">
-			<div>
+		</aside><!-- 
+		 --><aside class="right-sec inline-blk wrapper">
+			<div class="head-clr container">
 				<h3>Magna etiam</h3>
 				<p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
-				<button>learn more</button>
+				<button class="btn">learn more</button>
 			</div>
 
-			<div>
-				<h3>Magna etiam</h3>
+			<hr>
+			<div class="container">
+				<h3 class="head-clr">Magna etiam</h3>
 				<img src="assets/media/pic05.jpg">
 				<p>September 19, 2016</p>
-				<h3>Non velit accumsan cursus gravida amet sapien</h3>
+				<h3 class="head-clr">Non velit accumsan cursus gravida amet sapien</h3>
 				<p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
-				<button>continue reading</button>
+				<button class="btn">continue reading</button>
 			</div>
-
-			<h3>Arcu dolore</h3>
-			<h5>Etiam quis viverra lorem in semper lorem.</h5>
-			<p>September 15, 2016</p>
 			<hr>
-
-			<h5>Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</h5>
-			<p>September 15, 2016</p>
-			<hr>
-
-			<h5>Arcu vivamus quis venenatis orci lorem.</h5>
-			<p>September 15, 2016</p>
-			<hr>
-
-			<h5>Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</h5>
-			<p>September 15, 2016</p>
-			<hr>
-
-			<h5>Mauris neque quam, fermentum ut nisl vitae</h5>
-			<p>September 15, 2016</p>
-			<hr>
-			
-			<h5>Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</h5>
-			<p>September 15, 2016</p>
-			<hr>
-
-			<h5>Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.
-			</h5>
-			<p>September 15, 2016</p>
-
-		<button>more posts</button>
+			<div class="data container">
+				<h3 class="head-clr">Arcu dolore</h3>
+				<h5 class="primary-clr">Etiam quis viverra lorem in semper lorem.</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Arcu vivamus quis venenatis orci lorem.</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Mauris neque quam, fermentum ut nisl vitae</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</h5>
+				<p>September 15, 2016</p>
+				<hr>
+				<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.
+				</h5>
+				<p>September 15, 2016</p>
+				<button class="btn right-btm-btn">more posts</button>
+			</div>
 		</aside>
 
 		<section class="bottom-sec">
-			<div>
-				<h3>about us</h3>
+			<div class="inline-blk inline-blk wrapper">
+				<h3 class="head-clr">about us</h3>
 				<p>
 					Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur malesuada.
 				</p>
 				<p>Sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis.</p>
-				<button>learn more</button>
+				<button class="btn">learn more</button>
 				<div>
-					<div>
+					<div class="mid-sec inline-blk">
 						<img class="round-img" src="assets/media/pic06.jpg">
-						<h5>John Doe</h5>
+						<h5 class="head-clr">John Doe</h5>
 						<p>Lorem semper magna etiam</p>
 					</div>
 
 					<div>
 						<img class="round-img" src="assets/media/pic07.jpg">
-						<h5>Jane Anderson</h5>
+						<h5 class="head-clr">Jane Anderson</h5>
 						<p>Etiam feugiat adipiscing veroeros</p>
 					</div>
 
 					<div>
 						<img class="round-img" src="assets/media/pic09.jpg">
-						<h5>Mike Smith</h5>
+						<h5 class="head-clr">Mike Smith</h5>
 						<p>Consequat nulla dolor blandit</p>
 					</div>
-				</div>
+				</div><!-- 
 
-				<div class="contacts">
-					<h4>contact us</h4>
+				 --><div class="contacts inline-blk">
+					<h4 class="head-clr">contact us</h4>
 					<span><i class="fas fa-home"></i></span>
 					<p>
 						1234 Somewhere Road #80486
@@ -195,8 +228,9 @@
 					<p>twitter.com/untitled-tld</p>
 				</div>
 			</div>
-		</section>
+		</section>	
 	</main>
+
 	<footer>
 		<small>&copy untitled. all rights reserved.</small>
 	</footer>
